--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-    min-height: 100vh;
     background-color: #fff;
 }
 
@@ -21,19 +20,23 @@ select {
     height: 2.5rem;
     outline: none;
     border: none;
-    background-color: #979dac;
+    background-color: #001233;
+    color: #fff;
     font-size: 2rem;
+    box-shadow: 0px 0px 6px #001233;
 }
 
 #wrapThisBody {
+    min-height: 100vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap-reverse;
-    height: 96vh;
 }
 
 #opponentChoice {
-    margin: 2rem;
+    margin-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 #middlePart {
@@ -41,6 +44,7 @@ select {
     flex-direction: column;
     justify-content: center;
     gap: 1.2rem;
+    margin-top: 2rem;
 }
 
 #markBtns {
@@ -52,12 +56,14 @@ select {
 button {
     border: none;
     outline: none;
-    background-color: #979dac;
+    background-color: #33415c;
+    color: #fff;
     font-size: 2rem;
+    box-shadow: 0px 0px 6px #001233;
 }
 
 button:hover {
-    background-color: #5c677d;
+    background-color: #001233;
 }
 
 button:active {
@@ -70,8 +76,6 @@ button:active {
 }
 
 #wrapThisBoard {
-    position: sticky;
-    top: 1em;
     width: 25vw;
     height: 25vw;
     min-width: 300px;
@@ -82,7 +86,6 @@ button:active {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -100,12 +103,14 @@ button:active {
 #headLine {
     color: #001233;
     font-size: 4rem;
-    margin: 2rem;
+    margin-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .cell {
     border: 0.3rem solid #001233;
-    border-radius: 12px;
+    border-radius: 8px;
 }
 
 .nt {
@@ -127,7 +132,14 @@ button:active {
 footer {
     display: flex;
     justify-content: center;
-    padding: 0.3rem;
+    padding: 1rem;
     color: #000;
     font-size: 1.2rem;
+}
+
+@media screen and (max-height: 670px) {
+    #headLine {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
