--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-    background-color: #001233;
+    opacity: 0.9;
 }
 
 button:active {
@@ -76,8 +76,8 @@ button:active {
 }
 
 #wrapThisBoard {
-    width: 25vw;
-    height: 25vw;
+    width: 23vw;
+    height: 23vw;
     min-width: 300px;
     min-height: 300px;
 }
@@ -109,8 +109,12 @@ button:active {
 }
 
 .cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 0.3rem solid #001233;
     border-radius: 8px;
+    font-size: 5rem;
 }
 
 .nt {
